<resources>
    <string name="app_name">ITindr</string>
    <string name="info_header">О себе</string>
    <string name="login_header">Вход</string>
    <string name="login_button_text">Войти</string>
    <string name="back_button_text">Назад</string>
    <string name="email">Email</string>
    <string name="email_input_layout_text">Ваш email</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="register_header">Регистрация</string>
    <string name="save_button_text">Сохранить</string>
    <string name="password">Пароль</string>
    <string name="password_input_layout_text">Ваш пароль</string>
    <string name="password_create_input_layout_text">Придумайте пароль</string>
    <string name="password_confirm_header">Повторите пароль</string>
    <string name="logo_text">Ты найдешь того, \nкто поревьюит твой код</string>
    <string name="logo_image">logo image</string>
    <string name="background_image">background image</string>
    <string name="avatar_button">avatar button</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="name">Имя</string>
    <string name="name_input_layout_text">Ваше имя</string>
    <string name="additional_info">О себе</string>
    <string name="additional_info_input_layout_text">Опишите себя</string>
    <string name="interests">Укажите интересы</string>
    <string name="main_activity">Main Activity</string>
    <string name="logo_base_image">logo base image</string>
    <string name="logo_dot_image">logo dot image</string>
    <string name="objects_image">objects image</string>
    <string name="login_error_empty_email">Email не должен быть пустым</string>
    <string name="login_error_invalid_email">Введите корректный email</string>
    <string name="login_error_empty_password">Пароль не должен быть пустым</string>
    <string name="login_error_request_failed">Не удалось выполнить вход</string>
    <string name="no_cards">Карточки закончились</string>
    <string name="server_didnt_return_auth_token">Сервер не вернул токен авторизации</string>
    <string name="register_error_passwords_do_not_match">Пароли не совпадают</string>
    <string name="register_error_request_failed">Не удалось выполнить регистрацию</string>
    <string name="title_profile">Профиль</string>
</resources>