<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout android:id="@+id/motion_home_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layoutDescription="@xml/home_scene"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

        <FrameLayout
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/background_image"
                android:scaleType="centerCrop"
                android:src="@drawable/home_bg" />

            <ImageView
                android:id="@+id/objects_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/objects_image"
                android:scaleType="centerCrop"
                android:src="@drawable/home_foreground"/>
        </FrameLayout>


        <FrameLayout
            android:id="@+id/logo_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/logo_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_base_image"
                android:paddingTop="24dp"
                android:src="@drawable/logo_base"/>

            <ImageView
                android:id="@+id/logo_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_dot_image"
                android:paddingTop="24dp"
                android:src="@drawable/logo_dot"/>
        </FrameLayout>

        <TextView
            android:id="@+id/logo_text"
            style="@style/TextFieldHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/logo_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_container" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_home_button"
            style="@style/WhiteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/register_button_text"
            android:stateListAnimator="@animator/button_press_animator"
            app:layout_constraintBottom_toTopOf="@id/login_home_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_home_button"
            style="@style/Transparent20Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="16dp"
            android:paddingVertical="16dp"
            android:text="@string/login_button_text"
            android:stateListAnimator="@animator/button_press_animator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>